# django-ai-blog

./: Instructions.txt  pyproject.toml  requirements.txt
blogApp/: settings.py  wsgi.py
blogApp/settings/: base.py  dev.py  prod.py
