[project]
name = "django-ai-blog"
version = "1.0"
description = "This is my personal website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.2.3",
    "asgiref==3.6.0",
    "binaryornot==0.4.4",
    "certifi==2022.12.7",
    "chardet==5.1.0",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "cookiecutter==2.1.1",
    "django==4.1.4",
    "django-browser-reload==1.6.0",
    "django-ckeditor==6.5.1",
    "django-js-asset==2.0.0",
    "django-tailwind==3.4.0",
    "django-tinymce==3.5.0",
    "gunicorn==20.1.0",
    "idna==3.4",
    "jinja2==3.1.2",
    "jinja2-time==0.2.0",
    "markupsafe==2.1.1",
    "pillow==9.4.0",
    "psycopg2==2.9.5",
    "python-dateutil==2.8.2",
    "python-slugify==7.0.0",
    "pyyaml==6.0.2",
    "requests==2.28.2",
    "setuptools==80.4.0",
    "six==1.16.0",
    "sqlparse==0.4.3",
    "text-unidecode==1.3",
    "tzdata==2022.7",
    "urllib3==1.26.14",
    "wheel==0.45.1",
    "whitenoise==6.3.0",
]
